Cacti CHANGELOG

0.8.7b
-bug#0001083: Small Visual Fix for CACTI in "View Cacti Log File"
-bug#0001089: Graph xport modification to increase default rows output
-bug#0001091: Poller Incorrectly Identifies Unique Hosts
-bug#0001093: CLI Scripts brings MySQL down on large installations
-bug#0001094: Filtering Broken in Data Sources
-bug#0001103: Looping poller recache events
-bug#0001107: ss_fping.php 100% "Pkt Loss" work not properly
-bug#0001115: View Poller Cache does not show Data Sources that have no host
-bug#0001118: Graph Generation fails if e.g. ifDescr contains some blanks
-bug#0001132: TCP/UDP Ping Port Ignored
-bug#0001133: Downed Device Detection: None leads to database errors
-bug#0001134: update_host_status handles ping_availability incorrectly
-bug#0001143: "U" not allowed as min/max rrd value
-bug#0001158: Deleted user causes error on user log viewer
-bug#0001161: radio buttons have duplicate IDs. can easily be improved for usablility
-bug#0001164: alt attributes don't make tooltips, title attrs do (host.php)
-bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
-feature: Add additional logging to Graph Xport
-feature: Add rows dropdown to deivces, graphs and data sources
-feature: Add device_id and event count to devices
-feature: Add ids to devices, graphs and data sources pages
-feature: Add database repair utility

0.8.7a
-bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
-bug#0001029: Add --autoscale-min (rrdtool 1.2.x only) and --autoscale-max (using upper AND lower limit)
-bug#0001035: Allow for --logarithmic scaling without autoscaling
-bug#0001038: Data sources in RRAs have random order, messing up predefined CDEFs
-bug#0001043: Graph Templates drop down populates with duplicates
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
-bug#0001052: Graph template - GRINT creates CF function DEF